--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ async-prost = "0.2.1" # 支持把 protobuf 封装成 TCP frame
 futures = "0.3" # 提供 Stream trait
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
 tracing-subscriber = "0.2" # 日志处理
+thiserror = "1" # 错误定义和处理
 
 [build-dependencies]
 prost-build = "0.8" # 编译 protobuf
